--- a/contact.html
+++ b/contact.html
@@ -20,17 +20,15 @@
         </nav>
     </header>
     
-    <main class="products-grid">
-        <div class="product">
-            <img src="image3.jpg" alt="Product 3">
-            <p>Product 3 Description</p>
-            <button onclick="buyNow()">Buy Now</button>
-        </div>
-        <div class="product">
-            <img src="image4.jpg" alt="Product 4">
-            <p>Product 4 Description</p>
-            <button onclick="buyNow()">Buy Now</button>
-        </div>
+    <main>
+        <h1>Contact Us</h1>
+        <p>Have any questions? Reach out to us!</p>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Your Message"></textarea>
+            <button type="submit">Send Message</button>
+        </form>
     </main>
     
     <footer>
