--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Your Name & ID -->
+    <!-- Md.Atique Shahriar Arnob & 2221098 -->
     
     <header>
         <nav>
