--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <!-- Md.Atique Shahriar Arnob & 2221098 -->
+    <!-- MD.ATIQUE SHAHRIAR ARNOB & 2221098 -->
     
     <header>
         <nav>
@@ -26,10 +26,7 @@
             <p>Your one-stop destination for amazing products.</p>
             <button onclick="showAlert()">Click Me</button>
         </section>
-        <section>
-            <img src="image1.jpg" alt="Product 1">
-            <img src="image2.jpg" alt="Product 2">
-        </section>
+
     </main>
     
     <footer>
