--- a/products.html
+++ b/products.html
@@ -19,16 +19,37 @@
             </ul>
         </nav>
     </header>
-    
+    <h1>OUR ALL PRODUCTS</h1>
     <main class="products-grid">
+        
         <div class="product">
-            <img src="image3.jpg" alt="Product 3">
+            <img  src="/images/phone1.jpg" alt="Product 3">
+            <p>Product 1 Description</p>
+            <button onclick="buyNow()">Buy Now</button>
+        </div>
+        <div class="product">
+            <img class="iphone" src="/images/phone2.jpg" alt="Product 3">
+            <p>Product 2 Description</p>
+            <button onclick="buyNow()">Buy Now</button>
+        </div>
+        <div class="product">
+            <img src="/images/phone3.jpg" alt="Product 3">
             <p>Product 3 Description</p>
             <button onclick="buyNow()">Buy Now</button>
         </div>
         <div class="product">
-            <img src="image4.jpg" alt="Product 4">
+            <img class="iphone" src="/images/phone4.jpg" alt="Product 3">
             <p>Product 4 Description</p>
+            <button onclick="buyNow()">Buy Now</button>
+        </div>
+        <div class="product">
+            <img  src="/images/phone5.jpg" alt="Product 4">
+            <p>Product 5 Description</p>
+            <button onclick="buyNow()">Buy Now</button>
+        </div>
+        <div class="product">
+            <img class="iPhone" src="/images/phone3.jpg" alt="Product 4">
+            <p>Product 6 Description</p>
             <button onclick="buyNow()">Buy Now</button>
         </div>
     </main>
