--- a/products.html
+++ b/products.html
@@ -54,6 +54,8 @@
         </div>
     </main>
     
-
+    <footer>
+        <p>&copy; 2025 My Online Store. All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
